--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -5,6 +5,20 @@ media_folder: "site/static/img" # Folder where user uploaded files should go
 public_folder: "img"
 
 collections: # A list of collections the CMS should be able to edit
+  - name: "recipes" # Used in routes, ie.: /admin/collections/:slug/edit
+    label: "Recipe" # Used in the UI, ie.: "New Post"
+    folder: "site/content/recipes" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    fields:
+      - {label: "ID", name: "id", hint: "aaaa", widget: "slug", required: true}
+      - label: "カテゴリー"
+        name: "categories"
+        multiple: true
+        required: true
+        widget: "select"
+        options:
+          - { label: "ああ", value: { id: 'aaa', label: 'ああ' } }
+
   - name: "post" # Used in routes, ie.: /admin/collections/:slug/edit
     label: "Post" # Used in the UI, ie.: "New Post"
     folder: "site/content/post" # The path to the folder where the documents are stored
