--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -17,7 +17,9 @@ collections: # A list of collections the CMS should be able to edit
         required: true
         widget: "select"
         options:
-          - { label: "ああ", value: { id: 'aaa', label: 'ああ' } }
+          - "ああ"
+          - 'aaa'
+#          - { label: "ああ", value: { id: 'aaa', label: 'ああ' } }
 
   - name: "post" # Used in routes, ie.: /admin/collections/:slug/edit
     label: "Post" # Used in the UI, ie.: "New Post"
