--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -17,7 +17,10 @@ collections: # A list of collections the CMS should be able to edit
         required: true
         widget: "select"
         options:
-          - "ああ"
+          - label: "ああ"
+            value: { id: 'aaa', label: 'ああ' }
+          - label: "いい"
+            value: { id: 'iii', label: 'いい' }
           - 'aaa'
 #          - { label: "ああ", value: { id: 'aaa', label: 'ああ' } }
 
