--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -16,14 +16,22 @@ collections: # A list of collections the CMS should be able to edit
         multiple: true
         required: true
         widget: "select"
-        options:
-          - label: "ああ"
-            value:
-              - id: 'aaa'
-                label: 'ああ'
+
+        options: [{ label: "ああ", value: { id: 'aaa', label: 'ああ' } }]
+
+#        options:
+#          - { label: "ああ", value: { id: 'aaa', label: 'ああ' } }
+
+#          - label: "ああ"
+#            value:
+#              - id: 'aaa'
+#                label: 'ああ'
+
 #            value: { id: 'aaa', label: 'ああ' }
-          - label: "いい"
-            value: 'iii'
+
+#          - label: "いい"
+#            value: 'iii'
+
 #            value: { id: 'iii', label: 'いい' }
           - 'aaa'
 #          - { label: "ああ", value: { id: 'aaa', label: 'ああ' } }
